--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </li>
         </ul>
         <ul id="cart"
-            class="cart hidden bg-dark px-5 py-4 text-white z-50 flex text-light-sand font-bold h-screen flex-col fixed top-0 right-0">
+            class="cart overflow-x-hidden hidden bg-dark px-5 py-4 text-white z-50 flex text-light-sand font-bold h-screen flex-col fixed top-0 right-0">
             <div class="pb-5 mb-14 flex justify-between border-light-sand border-b">
                 <p class="text-[24px]">Shopping Cart</p>
                 <img id="close" class="cursor-pointer w-6 hover:scale-110" src="6bc1b01015367bd5436b.svg" alt="">
